# locify

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint.yml  py-intg-tests.yml  py-unit-tests.yml  pypi-release.yml
dev_config/python/: .pre-commit-config.yaml
locify/: __init__.py  cli.py
locify/indexing/: full_map.py  full_map_strategy.py
locify/indexing/full_map/: README.md  strategy.py
locify/indexing/repo_map/: README.md  strategy.py
locify/tree_sitter/: parser.py
locify/tree_sitter/queries/: README.md
locify/utils/: file.py  llm.py  path.py
reponav/utils/: llm.py
tests/: test_file_utils.py  test_llm_utils.py  test_path_utils.py  test_tree_sitter_parser.py
tests/integration/: test_full_map_strategy.py  test_repo_map_strategy.py
tests/unit/: test_file_utils.py  test_llm_utils.py  test_path_utils.py  test_tree_sitter_parser.py
