[tool.poetry]
name = "reponav"
version = "0.1.0"
description = "A library for navigating over large codebases."
authors = ["Hoang Tran <descience.thh10@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litellm = "^1.50.0"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
